minor spacing fix for user show page

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -73,8 +73,7 @@ body {
       }
 
       a:hover {
-        transition: .2s;
-        text-decoration: underline;
+        color: $accent-blue;
       }
     }
 
