--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -147,13 +147,30 @@ h3 {
 
 .container {
   margin: 20px;
+
+  h1 {
+    margin: 1em 0;
+  }
+
+  h3 {
+    margin: 1em 0.5em;
+  }
 }
 
 .history {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-gap: 40px;
+  grid-gap: 1em;
   margin: 1em;
   margin-left: 0;
+
+  h5 {
+    font-size: 0.8em;
+    font-weight: 200;
+    margin: 0;
+  }
+  p {
+    margin: 1em 0 0 0;
+  }
 }
 /*style for the users show page rides*/
